kubernetes/mariadb-galera/base/mysqldump/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-truenas-egress
  namespace: mariadb-galera
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: mariadb-galera
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: mysqldump-cron
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.3/32
      ports:
        - protocol: TCP
          port: 9000
